# anonymous-telegram-bot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
bot/: bot.py
bot/data/: config.py
bot/filters/: __init__.py
bot/handlers/user/: answer_back.py  start.py  start_with_params.py  text_to_send_state.py
bot/keyboards/inline/: __init__.py  answer_back.py  share_tg_link_ikb.py
bot/states/: __init__.py  user.py
src/: .env.example  alembic.ini  bot.py  config.py
src/data/: config.py
src/db/: __init__.py  base.py  repository.py  unitofwork.py  user.py
src/filters/: __init__.py  chat_type.py
src/handlers/user/: __init__.py  answer_back.py  cancel_inline.py  send_more.py  start.py  start_with_params.py  text_to_send_state.py
src/infrastructure/: config_loader.py
src/keyboards/inline/: __init__.py  answer_back.py  cancel_ikb.py  send_more.py  share_tg_link_ikb.py
src/migrations/: env.py
src/migrations/versions/: 2024_07_11_at12_08-1f162e4c8fce_create_table_users.py  2024_07_11_at12_24-9e7d4d5f3eb5_rename_column_user_tg_id_tg_id.py  2024_07_11_at12_32-b7a95e6f55ea_users_tg_id_int_bigint_hashed_tg_id_int_.py  2024_07_12_at15_55-86c1b1c3ba21_column_id_deleted_tg_id_id_hashed_tg_id_.py
src/models/: users.py
src/other/: constants.py  get_hash.py
src/presentation/: bot.py
src/presentation/telegram/: __init__.py  keyboards.py  (+3 more)
src/repositories/: repository.py  unitofwork.py  user.py
src/schemas/: user.py
src/services/: users.py
src/states/: __init__.py
src/utils/: case_converter.py
(+1 files in other folders)
