[tool.poetry]
name = "anonymous-telegram-bot"
description = ""
version = "0.0.1"
authors = ["intezya <intezya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.8.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
