[tool.poetry]
name = "anonymous-telegram-bot"
description = ""
version = "0.0.1"
authors = ["intezya <intezya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.8.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
alembic = "^1.13.2"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
